--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.28)
 project(IniManager)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
 include_directories(.)
 
 add_executable(IniManager
-        IniFIle.cpp
-        IniFIle.h)
+        IniFile.cpp
+        IniFile.h
+        main.cpp)
